--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,15 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 {% block content %}
+{% load i18n %}
 <!-- bradcam_area  -->
 <div class="bradcam_area bradcam_bg_3">
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text text-center">
-                    <h3>About Us</h3>
-                    <p>Pixel perfect design with awesome contents</p>
+                    <h3>{% trans 'About Us'%}</h3>
+                    <p>{% trans 'Pixel perfect design with awesome contents'%}</p>
                 </div>
             </div>
         </div>
@@ -21,7 +22,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="story_heading">
-                    <h3>Our Story</h3>
+                    <h3>{% trans 'Our Story'%}</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-11 offset-lg-1">
@@ -57,24 +58,6 @@
                         </div>
                         <div class="counter_wrap">
                             <div class="row">
-                                <div class="col-lg-4 col-md-4">
-                                    <div class="single_counter text-center">
-                                        <h3 class="counter">378</h3>
-                                        <p>Tour has done successfully</p>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4">
-                                    <div class="single_counter text-center">
-                                        <h3 class="counter">30</h3>
-                                        <p>Yearly tour arrange</p>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4">
-                                    <div class="single_counter text-center">
-                                        <h3 class="counter">2263</h3>
-                                        <p>Happy Clients</p>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -89,7 +72,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="video_wrap text-center">
-                    <h3>Enjoy Video</h3>
+                    <h3>{% trans 'Enjoy Video'%}</h3>
                     <div class="video_icon">
                         <a class="popup-video video_play_button" href="https://www.youtube.com/watch?v=f59dDEk57i0">
                             <i class="fa fa-play"></i>
@@ -110,8 +93,8 @@
                     <div class="icon">
                         <img src="{% static 'img/svg_icon/1.svg'%}" alt="">
                     </div>
-                    <h3>Comfortable Journey</h3>
-                    <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                    <h3>{% trans 'Comfortable Journey'%}</h3>
+                    <p>{% trans 'A wonderful serenity has taken to the possession of my entire soul.'%}</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -119,8 +102,8 @@
                     <div class="icon">
                         <img src="{% static 'img/svg_icon/2.svg'%}" alt="">
                     </div>
-                    <h3>Luxuries Hotel</h3>
-                    <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                    <h3>{% trans 'Luxuries Hotel'%}</h3>
+                    <p>{% trans 'A wonderful serenity has taken to the possession of my entire soul.'%}</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -128,73 +111,11 @@
                     <div class="icon">
                         <img src="{% static 'img/svg_icon/3.svg'%}" alt="">
                     </div>
-                    <h3>Travel Guide</h3>
-                    <p>A wonderful serenity has taken to the possession of my entire soul.</p>
+                    <h3>{% trans 'Travel Guide'%}</h3>
+                    <p>{% trans 'A wonderful serenity has taken to the possession of my entire soul.'%}</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-<!-- testimonial_area  -->
-<div class="testimonial_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-12">
-                <div class="testmonial_active owl-carousel">
-                    <div class="single_carousel">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="single_testmonial text-center">
-                                    <div class="author_thumb">
-                                        <img src="{% static 'img/testmonial/author.png'%}" alt="">
-                                    </div>
-                                    <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                        programmes to help alleviate human suffering.</p>
-                                    <div class="testmonial_author">
-                                        <h3>- Micky Mouse</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_carousel">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="single_testmonial text-center">
-                                    <div class="author_thumb">
-                                        <img src="{% static 'img/testmonial/author.png'%}" alt="">
-                                    </div>
-                                    <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                        programmes to help alleviate human suffering.</p>
-                                    <div class="testmonial_author">
-                                        <h3>- Tom Mouse</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_carousel">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="single_testmonial text-center">
-                                    <div class="author_thumb">
-                                        <img src="{% static 'img/testmonial/author.png'%}" alt="">
-                                    </div>
-                                    <p>"Working in conjunction with humanitarian aid agencies, we have supported
-                                        programmes to help alleviate human suffering.</p>
-                                    <div class="testmonial_author">
-                                        <h3>- Jerry Mouse</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /testimonial_area  -->
 {% endblock%}
