--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <header>
     <div class="header-area ">
         <div id="sticky-header" class="main-header-area">
@@ -17,19 +18,19 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li class="{% if request.path == '/' %}active{% endif %}">
-                                            <a href="{% url 'pages:home' %}">Home</a>
+                                            <a href="{% url 'pages:home' %}">{% trans 'Home'%}</a>
                                         </li>
                                         <li class="{% if request.path == '/destinations/' %}active{% endif %}">
-                                            <a href="{% url 'destinations:list' %}">Destinations</a>
+                                            <a href="{% url 'destinations:list' %}">{% trans 'Destinations'%}</a>
                                         </li>
                                             <li class="{% if request.path == '/about/' %}active{% endif %}">
-                                                <a href="{% url 'pages:about' %}">About</a>
+                                                <a href="{% url 'pages:about' %}">{% trans 'About'%}</a>
                                             </li>
                                             <li class="{% if request.path == '/blog/' %}active{% endif %}">
-                                                <a href="{% url 'posts:list' %}">Blog</a>
+                                                <a href="{% url 'posts:list' %}">{% trans 'Blog'%}</a>
                                             </li>
                                         <li class="{% if request.path == '/contact/' %}active{% endif %}">
-                                            <a href="{% url 'pages:contact' %}">Contacts</a>
+                                            <a href="{% url 'pages:contact' %}">{% trans 'Contacts'%}</a>
                                         </li>
                                     </ul>
                                 </nav>
