--- a/templates/about.html
+++ b/templates/about.html
@@ -29,16 +29,20 @@
                         <div class="story_info">
                             <div class="row">
                                 <div class="col-lg-9">
-                                    <p>Consulting represents success at realizing the company is going in the wrong
+                                    <p>
+                                        {% blocktrans %}
+                                        Consulting represents success at realizing the company is going in the wrong
                                         direction. The only time the company fails is when it is not possible to do a
                                         turnaround anymore. We help companies pivot into more profitable directions
                                         where they can expand and grow. It is inevitable that companies will end up
-                                        making a few mistakes; we help them correct these mistakes.</p>
-                                    <p>Consulting represents success at realizing the company is going in the wrong
+                                        making a few mistakes; we help them correct these mistakes.
+                                        Consulting represents success at realizing the company is going in the wrong
                                         direction. The only time the company fails is when it is not possible to do a
                                         turnaround anymore. We help companies pivot into more profitable directions
                                         where they can expand and grow. It is inevitable that companies will end up
-                                        making a few mistakes; we help them correct these mistakes.</p>
+                                        making a few mistakes; we help them correct these mistakes.
+                                        {% endblocktrans %}
+                                    </p>
                                 </div>
                             </div>
                         </div>
