--- a/templates/destinations.html
+++ b/templates/destinations.html
@@ -19,28 +19,29 @@
 
 <!-- where_togo_area_start  -->
 <div class="where_togo_area">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3">
-                <div class="form_area">
-                    <h3>{% trans 'Where you want to go?'%}</h3>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-3">
+                    <div class="form_area">
+                        <h3>Where you want to go?</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="search_wrap">
-                    <form class="search_form" action="#">
-                        <div class="input_field">
-                            <input type="text" placeholder="{% trans 'Where to go?'%}">
-                        </div>
-                        <div class="search_btn">
-                            <button class="boxed-btn4 " type="submit">{% trans 'Search'%}</button>
-                        </div>
-                    </form>
+                <div class="col-lg-9">
+                    <div class="search_wrap">
+                        <form class="search_form" action="#">
+                            <div class="input_field">
+                                <input name="q" value="{{request.GET.q}}" type="text" placeholder="Where to go?">
+                            </div>
+                            <div class="search_btn">
+                                <button class="boxed-btn4 " type="submit" >Search</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 <!-- where_togo_area_end  -->
 
 
@@ -98,10 +99,10 @@
                         <div class="single_place">
                             <div class="thumb">
                                 <img src="{{tours.image.url}}" alt="">
-                                <a href="#" class="prise">$500</a>
+                                <a href="" class="prise">$500</a>
                             </div>
                             <div class="place_info">
-                                <a href="destination_details.html"><h3>{{tours.title}}</h3></a>
+                                <a href=""><h3>{{tours.title}}</h3></a>
 
                                 <div class="rating_days d-flex justify-content-between">
 
