--- a/templates/index.html
+++ b/templates/index.html
@@ -49,29 +49,6 @@
 <!-- slider_area_end -->
 
 <!-- where_togo_area_start  -->
-<div class="where_togo_area">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3">
-                <div class="form_area">
-                    <h3>{% trans 'Where you want to go?'%}</h3>
-                </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="search_wrap">
-                    <form class="search_form" action="#">
-                        <div class="input_field">
-                            <input type="text" placeholder="{% trans 'Where to go'%}?">
-                        </div>
-                        <div class="search_btn">
-                            <button class="boxed-btn4 " type="submit" style="margin-left: -70px">{% trans 'Search'%}</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- where_togo_area_end  -->
 
 <!-- popular_destination_area_start  -->
@@ -92,7 +69,7 @@
                         <img src="{{ home.img.url }}" alt="">
                     </div>
                     <div class="content">
-                        <p class="d-flex align-items-center">{{home.title}} <a href="travel_destination.html"> 07 Places</a></p>
+                        <p class="d-flex align-items-center">{{home.title}} <a href=""> 07 Places</a></p>
                     </div>
                 </div>
             </div>
