--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,7 @@
 </head>
 <body class="form-v4">
 	<div class="page-content">
+        {% csrf_token %}
 		<div class="form-v4-content">
 			<div class="form-left">
 				<h2>INFOMATION</h2>
