--- a/templates/contact.html
+++ b/templates/contact.html
@@ -67,7 +67,8 @@
                         <h2 class="contact-title">{% trans 'Get in Touch' %}</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                        <form method="post">
+                            {% csrf_token %}
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
